SED-4574 refactoring grid and execution metrics, keeping prometheus dep only in handler